# SlicerCastInterface

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sync_extension.py
CastInterface/: CMakeLists.txt  CastInterface.py  README.md  sync_extension.py
CastInterface/Resources/: ai-results-mrbrain.dcm
CastInterface/Resources/UI/: castaiservice.ui
CastInterface/Resources/scripts/: idc_claude.py  skull-stripper.py  total_segmentator.py  totalsegmentator-readme.md
CastInterface/cast_api/: azure-webapp.md  build_clients.sh  cast_api.py  make_zip.py  requirements.txt
CastInterface/cast_api/Resources/: admin.html  conference-client.html
CastInterface/cast_api/docs/: CAST-HUB-README.md  README.md  filename-policy.md
CastInterface/cast_api/samples/: README.md
CastInterface/cast_api/samples/.MRBrainSEG/: study.json
CastInterface/cast_api/samples/MRBrain/: study.json
CastInterface/cast_api/samples/TestPattern/: study.json
CastInterface/docs/: binary-file-transfer.md  cast-description.md  filename-policy.md  sceneview-readme.md
CastInterface/docs/images/: build_binary_transfer_animated.py  context-management-readme.md
